--- a/src/ui/MainForm.form
+++ b/src/ui/MainForm.form
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ui.MainForm">
-  <grid id="27dc6" binding="root" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="root" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="0" left="0" bottom="4" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-14482889"/>
+    </properties>
     <border type="none"/>
     <children>
       <hspacer id="8d9ae">
@@ -15,7 +17,7 @@
       </hspacer>
       <grid id="9b337" binding="mapHolder" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -23,20 +25,37 @@
       </grid>
       <component id="75a65" class="javax.swing.JButton" binding="clearBtn">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="100" height="32"/>
+          </grid>
         </constraints>
         <properties>
+          <background color="-14040"/>
+          <borderPainted value="true"/>
+          <font name="Segoe UI" size="14" style="1"/>
+          <foreground color="-16777216"/>
           <text value="Borrar todo"/>
         </properties>
       </component>
       <component id="a54f3" class="javax.swing.JButton" binding="dijkstraBtn">
         <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="100" height="32"/>
+          </grid>
         </constraints>
         <properties>
+          <background color="-14040"/>
+          <font name="Segoe UI" size="14" style="1"/>
+          <foreground color="-16777216"/>
+          <hideActionText value="false"/>
           <text value="Continuar"/>
         </properties>
       </component>
+      <hspacer id="51ab9">
+        <constraints>
+          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
     </children>
   </grid>
 </form>
